--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/btnSegundoBimestre"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
+                android:enabled="true"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn_customizado"
                 android:text="2º Bimestre"/>
@@ -49,7 +49,7 @@
                 android:id="@+id/btnTerceiroBimestre"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
+                android:enabled="true"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn_customizado"
                 android:text="3º Bimestre"/>
@@ -58,7 +58,7 @@
                 android:id="@+id/btnQuartoBimestre"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
+                android:enabled="true"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn_customizado"
                 android:text="4º Bimestre"/>
@@ -67,7 +67,7 @@
                 android:id="@+id/btnResultadoFinal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
+                android:enabled="true"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn_customizado"
                 android:text="Resultado Final"/>
